# ARC

./: Lattice.py  README.md  mean_field.py  pyproject.toml  sync_and_commit.sh  test_lattice.py
examples/: benchmark_heom_32.py  heom_demo.py
patches/: merge_prototype.patch
src/arc/: heom.py  init.py  lattice.py
src/arc/core/: lattice.py
src/arc/heom/: heom_engine.py
src/core/: heom_solver.py
